<resources>
    <string name="app_name">Elephant News</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="entertainment">Entertainment</string>
    <string name="military">Military</string>
    <string name="education">Education</string>
    <string name="culture">Culture</string>
    <string name="health">Health</string>
    <string name="finance">Finance</string>
    <string name="sports">Sports</string>
    <string name="car">Car</string>
    <string name="tech">Tech</string>
    <string name="society">Society</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="preferences">Preferences</string>
    <string name="style">Style</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="my_account">My Account: %s</string>
    <string name="news_detail">News Detail</string>
    <string name="downloading_images">Downloading images, please wait...</string>
    <string name="app_not_installed">Sharing failed because app is not installed</string>
    <string name="news_starred_on">You have starred the news</string>
    <string name="news_starred_off">You no longer star the news</string>
    <string name="recommend">Recommendations</string>
    <string name="current_account">Current Account</string>
    <string name="enter_password">Enter your current password</string>
    <string name="enter_new_password">Enter new password if you want to change it</string>
    <string name="add_new_account">Add New Account</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="enter_new_account_username">Enter username for new account</string>
    <string name="enter_new_account_password">Enter password for new account</string>
    <string name="confirm_new_account_password">Enter again to confirm</string>
    <string name="switch_account">Switch Account</string>
    <string name="switch_account_name">Enter account username</string>
    <string name="switch_account_password">Enter account password</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string-array name="categories_name">
        <item>Entertainment</item>
        <item>Military</item>
        <item>Education</item>
        <item>Culture</item>
        <item>Health</item>
        <item>Finance</item>
        <item>Sports</item>
        <item>Car</item>
        <item>Tech</item>
        <item>Society</item>
    </string-array>
    <string-array name="categories_value">
        <item>entertainment</item>
        <item>military</item>
        <item>education</item>
        <item>culture</item>
        <item>health</item>
        <item>finance</item>
        <item>sports</item>
        <item>car</item>
        <item>tech</item>
        <item>society</item>
    </string-array>
    <string name="star">Favourite</string>
    <string name="search">Search</string>
    <string name="recommend_none">No recommendations found</string>
    <string name="history">History</string>
    <string name="map">Locations Map</string>
    <string name="network_error"> error</string>
    <string name="account_management">Account Management</string>
    <string name="star_number">Number of news starred: %d</string>
    <string name="history_number">Number of news read: %d</string>
    <string name="account_not_exist">Account doesn\'t exist!</string>
    <string name="incorrect_password">Incorrect password!</string>
    <string name="illegal_characters_in_username">Illegal characters in new username!</string>
    <string name="username_already_exists">Username already exists!</string>
    <string name="password_does_not_math">Password does not match!</string>
    <string name="loading_avatar">Loading avatar...</string>
    <string name="fail_to_set_avatar">Failed to set avatar</string>
</resources>
