<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:text="@string/switch_account"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:gravity="center"/>

    <EditText
        android:id="@+id/switch_username_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/switch_account_name"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/switch_password_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/switch_account_password"
        android:textSize="15sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/switch_button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="27dp"
            android:text="@string/cancel"
            android:textSize="15sp" />
        <Button
            android:id="@+id/switch_button_confirm"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:text="@string/confirm"
            android:textSize="15sp"/>
    </LinearLayout>

</LinearLayout>